--- a/exercises/Untitled.ipynb
+++ b/exercises/Untitled.ipynb
@@ -7,9 +7,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "os.environ[\"POLARS_VERBOSE\"] = \"1\"\n",
     "import polars as pl\n",
     "from datetime import date, timedelta\n",
-    "from polars_finance.labels import raw_forward_returns, fixed_time_dynamic_threshold_label, fixed_time_label, triple_barrier_label\n",
+    "from polars_finance.labels import raw_forward_returns_expr, fixed_time_dynamic_threshold_label_expr, fixed_time_label_expr, triple_barrier_label\n",
     "from polars_finance.bars import volume_bars\n",
     "from tqdm.notebook import tqdm\n",
     "pl.enable_string_cache()"
@@ -30,6 +32,66 @@
     "    },\n",
     "    schema_overrides={\"price\": pl.Float64}\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ba594232-a0c4-40aa-b3c2-cfc6121edcd1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "prices: 200\n",
+      "horizontal_widths: 200\n",
+      "vertical_barriers: 200\n",
+      "seed_indicator: 200\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (200, 7)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>price</th><th>horizontal_width</th><th>vertical_barrier</th><th>seed_indicator</th><th>triple_barrier_label_event</th><th>triple_barrier_label_ret</th><th>triple_barrier_label_n_bars</th></tr><tr><td>f64</td><td>f64</td><td>i64</td><td>bool</td><td>i8</td><td>f64</td><td>i64</td></tr></thead><tbody><tr><td>1.0</td><td>0.1</td><td>5</td><td>true</td><td>1</td><td>4.0</td><td>5</td></tr><tr><td>2.0</td><td>0.1</td><td>5</td><td>true</td><td>1</td><td>2.0</td><td>5</td></tr><tr><td>3.0</td><td>0.1</td><td>5</td><td>true</td><td>1</td><td>1.333333</td><td>5</td></tr><tr><td>4.0</td><td>0.1</td><td>5</td><td>true</td><td>1</td><td>1.0</td><td>5</td></tr><tr><td>5.0</td><td>0.1</td><td>5</td><td>true</td><td>1</td><td>0.8</td><td>5</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>196.0</td><td>0.1</td><td>5</td><td>true</td><td>1</td><td>0.020408</td><td>5</td></tr><tr><td>197.0</td><td>0.1</td><td>5</td><td>true</td><td>1</td><td>0.015228</td><td>4</td></tr><tr><td>198.0</td><td>0.1</td><td>5</td><td>true</td><td>1</td><td>0.010101</td><td>3</td></tr><tr><td>199.0</td><td>0.1</td><td>5</td><td>true</td><td>1</td><td>0.005025</td><td>2</td></tr><tr><td>200.0</td><td>0.1</td><td>5</td><td>true</td><td>null</td><td>null</td><td>null</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (200, 7)\n",
+       "┌───────┬───────────────┬──────────────┬──────────────┬──────────────┬──────────────┬──────────────┐\n",
+       "│ price ┆ horizontal_wi ┆ vertical_bar ┆ seed_indicat ┆ triple_barri ┆ triple_barri ┆ triple_barri │\n",
+       "│ ---   ┆ dth           ┆ rier         ┆ or           ┆ er_label_eve ┆ er_label_ret ┆ er_label_n_b │\n",
+       "│ f64   ┆ ---           ┆ ---          ┆ ---          ┆ nt           ┆ ---          ┆ ars          │\n",
+       "│       ┆ f64           ┆ i64          ┆ bool         ┆ ---          ┆ f64          ┆ ---          │\n",
+       "│       ┆               ┆              ┆              ┆ i8           ┆              ┆ i64          │\n",
+       "╞═══════╪═══════════════╪══════════════╪══════════════╪══════════════╪══════════════╪══════════════╡\n",
+       "│ 1.0   ┆ 0.1           ┆ 5            ┆ true         ┆ 1            ┆ 4.0          ┆ 5            │\n",
+       "│ 2.0   ┆ 0.1           ┆ 5            ┆ true         ┆ 1            ┆ 2.0          ┆ 5            │\n",
+       "│ 3.0   ┆ 0.1           ┆ 5            ┆ true         ┆ 1            ┆ 1.333333     ┆ 5            │\n",
+       "│ 4.0   ┆ 0.1           ┆ 5            ┆ true         ┆ 1            ┆ 1.0          ┆ 5            │\n",
+       "│ 5.0   ┆ 0.1           ┆ 5            ┆ true         ┆ 1            ┆ 0.8          ┆ 5            │\n",
+       "│ …     ┆ …             ┆ …            ┆ …            ┆ …            ┆ …            ┆ …            │\n",
+       "│ 196.0 ┆ 0.1           ┆ 5            ┆ true         ┆ 1            ┆ 0.020408     ┆ 5            │\n",
+       "│ 197.0 ┆ 0.1           ┆ 5            ┆ true         ┆ 1            ┆ 0.015228     ┆ 4            │\n",
+       "│ 198.0 ┆ 0.1           ┆ 5            ┆ true         ┆ 1            ┆ 0.010101     ┆ 3            │\n",
+       "│ 199.0 ┆ 0.1           ┆ 5            ┆ true         ┆ 1            ┆ 0.005025     ┆ 2            │\n",
+       "│ 200.0 ┆ 0.1           ┆ 5            ┆ true         ┆ null         ┆ null         ┆ null         │\n",
+       "└───────┴───────────────┴──────────────┴──────────────┴──────────────┴──────────────┴──────────────┘"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "triple_barrier_label(test_df, \"price\", pl.lit(0.1)).unnest(\"triple_barrier_label\")"
    ]
   },
   {
@@ -128,7 +190,8 @@
     "test_df.with_columns(\n",
     "    raw_forward_returns(pl.col(\"price\")).alias(\"ret\"),\n",
     "    fixed_time_label(pl.col(\"price\"), t=1).alias(\"label1\"),\n",
-    "    fixed_time_label(pl.col(\"price\"), upper_threshold=.2, t=2).alias(\"label2\")\n",
+    "    fixed_time_label(pl.col(\"price\"), upper_threshold=.2, t=2).alias(\"label2\"),\n",
+    "    fixed_time_dynamic_threshold_label(pl.col(\"price\"), )\n",
     ")"
    ]
   },
